kubernetes/apps/network/traefik/resources/traefik-authentik-bypass.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authentik-bypass
  namespace: network
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  ipWhiteList:
    sourceRange:
      - 192.168.1.16/32
