kubernetes/apps/network/traefik/resources/dashboard-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dashboard
  namespace: network
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: zerossl-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: traefik@internal
spec:
  tls:
    - hosts:
        - traefik.dartus.fr
      secretName: traefik.dartus.fr-tls
  rules:
    - host: traefik.dartus.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: traefik
                port:
                  number: 443
