kubernetes/apps/network/traefik/resources/traefik-externalingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: qui
  namespace: network
spec:
  type: ExternalName
  externalName: nascobar.dartus.fr   # <-- remplace par le FQDN ou IP résolvable
  ports:
    - port: &port 7476
      targetPort: *port
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qui
  namespace: network
  ingressClassName: traefik-ingresses
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: zerossl-prod
    acme.cert-manager.io/http01-edit-in-place: "false"
    # optionnel : rediriger http->https (Traefik-specific middleware peut faire ça)
spec:
  tls:
  - hosts:
    - tor.dartus.fr
    secretName: qui-tls
  rules:
  - host: tor.dartus.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qui
            port:
              number: 7476
---
apiVersion: v1
kind: Service
metadata:
  name: piege
  namespace: network
spec:
  type: ExternalName
  externalName: piege.lan   # <-- remplace par le FQDN ou IP résolvable
  ports:
    - port: &port 80
      targetPort: *port
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: piege
  namespace: network
  ingressClassName: traefik-ingresses
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: zerossl-prod
    acme.cert-manager.io/http01-edit-in-place: "false"
    # optionnel : rediriger http->https (Traefik-specific middleware peut faire ça)
spec:
  tls:
  - hosts:
    - piege.dartus.fr
    secretName: piege-tls
  rules:
  - host: piege.dartus.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: piege
            port:
              number: 80
