kubernetes/apps/network/traefik/resources/traefik-externalingress_old.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: pi-ingress
  namespace: network
  annotations:
    argocd.argoproj.io/sync-wave: "-100"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostSNI(`tor.dartus.fr`)
      services:
        - name: pi-external
          port: 443

    - match: HostSNI(`authelia.dartus.fr`)
      services:
        - name: pi-external
          port: 443

  tls:
    passthrough: true
